--- a/src/styles/Navigation.css
+++ b/src/styles/Navigation.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   background-color: #c5fffa;
+  font-family: 'Roboto', sans-serif;
 }
 
 header {
@@ -8,6 +9,7 @@ header {
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.4)), to(rgba(0, 0, 0, 0.5))), url("../images/more_hands.jpg");
   background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.5)), url("../images/more_hands.jpg");
   background-size: cover;
+  background-position: 20%;
   padding: 4.5em 0 4.5em 0;
   text-align: center;
   color: white;
