Redesigned the layout, still needs finishing touches after adding functionality

--- a/src/styles/CreatePolicyForm.scss
+++ b/src/styles/CreatePolicyForm.scss
@@ -4,6 +4,7 @@
     flex-direction: column;
     width: 30%;
     align-self: center;
+    margin-top: 40px;
   }
   
   .createPolicyContainer button {
@@ -14,10 +15,11 @@
       align-self: center;
   
   }
+
   
   .createPolicyContainer h2 {
-  
-      align-self: center;
+        font-size: 45px;
+        align-self: center;
   
   }
   
