--- a/src/styles/SeeCurrentPolicies.css
+++ b/src/styles/SeeCurrentPolicies.css
@@ -24,6 +24,14 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  overflow-x: auto;
+}
+
+.see_policies_container h2 {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  font-size: 45px;
 }
 
 #customers {
@@ -42,7 +50,11 @@
 }
 
 #customers tr:nth-child(even) {
-  background-color: #f2f2f2;
+  background-color: #3e4a6e;
+}
+
+#customers tr:nth-child(even) {
+  background-color: #494a61;
 }
 
 #customers tr:hover {
