--- a/src/styles/CreatePolicyForm.css
+++ b/src/styles/CreatePolicyForm.css
@@ -12,6 +12,7 @@
   width: 30%;
   -ms-flex-item-align: center;
       align-self: center;
+  margin-top: 40px;
 }
 
 .createPolicyContainer button {
@@ -24,6 +25,7 @@
 }
 
 .createPolicyContainer h2 {
+  font-size: 45px;
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
