--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1,6 +1,11 @@
+#root {
+  height: 100%;
+  overflow: hidden;
+}
+
 body {
   margin: 0;
-  background-color: #c5fffa;
+  background: linear-gradient(135deg, #b093ff 14%, #6a74ff 52%, #ebebeb 100%, #3a4849 100%, #00f1ff 100%);
   font-family: 'Roboto', sans-serif;
 }
 
@@ -19,8 +24,63 @@ h1 {
   font-size: 50px;
 }
 
+.main_div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 100%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 header tagline {
   font-size: 30px;
+}
+
+.left_portion {
+  width: 25%;
+  height: 100%;
+  background-color: aliceblue;
+  border-radius: 20px 0 0 20px;
+  color: black;
+}
+
+.left_portion > div {
+  height: 100vh;
+}
+
+.right_portion {
+  width: 100%;
+  height: 95vh;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  margin: 0 auto 0 auto;
+  overflow-y: auto;
+  color: white;
+}
+
+.right_portion > div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-top: 40px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-style: solid 1px;
+}
+
+.right_portion:nth-child(1) {
+  margin: 40px 0 0 0;
 }
 
 footer {
