--- a/src/styles/Navigation.scss
+++ b/src/styles/Navigation.scss
@@ -70,8 +70,20 @@
 .nav_button {
 
     @include mainButton;
+    @include buttonReset;
+    @include buttonStyles;
     align-self: center;
     width: 50%;
+    
 
 }
+
+.nav_button:hover {
+    
+    background-color: white;
+    
+
+}
+
+
 
