--- a/src/styles/CreatePolicyForm.scss
+++ b/src/styles/CreatePolicyForm.scss
@@ -31,3 +31,25 @@
       margin: 0 0 40px 0;
   
   }
+
+  @media screen and (max-width: 800px) {
+      
+    .createPolicyForm {
+
+        width: 80%;
+
+    }
+    .createPolicyContainer h2 {
+
+        margin-top: 20px;
+        text-align: center;
+
+    }
+
+    .submitButtonContainer {
+
+        margin-bottom: 20px;
+
+    }
+
+  }
