--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -146,8 +146,21 @@ footer {
     height: 300px;
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1150px) {
     
+
+    #root {
+
+        overflow: visible;
+
+    }
+
+    .left_portion {
+
+        width: 100%;
+        border-radius: 0;
+
+    }
 
 
 }
